[gd_scene load_steps=6 format=3 uid="uid://cspki5ar24tpr"]

[ext_resource type="Script" path="res://Scenes/UI/Quests/quest_popup_menu.gd" id="1_e331b"]
[ext_resource type="FontFile" uid="uid://csf05u5hrgcdp" path="res://Resources/SuperComic-qZg62.ttf" id="2_b45oa"]
[ext_resource type="Texture2D" uid="uid://fucx7sa5e162" path="res://Assets/UI_Assets/icons8-tick-box-50.png" id="3_cr87f"]
[ext_resource type="Texture2D" uid="uid://cl1q2t1tkvgxx" path="res://Assets/UI_Assets/icons8-unchecked-checkbox-50.png" id="4_ms86n"]

[sub_resource type="LabelSettings" id="LabelSettings_6r3c7"]
font = ExtResource("2_b45oa")
font_size = 12

[node name="QuestPopupMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_e331b")

[node name="Panel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 470.0
offset_top = 350.0
offset_right = 900.0
offset_bottom = 490.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(215, 140)
mouse_filter = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 2
offset_left = 21.0
offset_top = 27.0
offset_right = 363.0
offset_bottom = 113.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Title" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Quest Title"
label_settings = SubResource("LabelSettings_6r3c7")
vertical_alignment = 1

[node name="Description2" type="RichTextLabel" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/line_separation = 10
theme_override_fonts/normal_font = ExtResource("2_b45oa")
theme_override_font_sizes/normal_font_size = 12
text = "DESCRIPTION"
fit_content = true

[node name="DesiredItem" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "desiredItem X 1"
label_settings = SubResource("LabelSettings_6r3c7")
vertical_alignment = 1

[node name="CheckBox" type="CheckBox" parent="Panel"]
layout_direction = 3
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 12.0
offset_top = -29.0
offset_right = 70.0
offset_bottom = 29.0
grow_vertical = 2
focus_mode = 0
mouse_filter = 2
theme_override_fonts/font = ExtResource("2_b45oa")
theme_override_font_sizes/font_size = 24
theme_override_icons/checked = ExtResource("3_cr87f")
theme_override_icons/unchecked = ExtResource("4_ms86n")
theme_override_icons/checked_disabled = ExtResource("3_cr87f")
theme_override_icons/unchecked_disabled = ExtResource("4_ms86n")
disabled = true
flat = true
alignment = 2
expand_icon = true

[connection signal="gui_input" from="Panel" to="." method="_on_gui_input"]
